[mod]APIドキュメント更新
