# openapi.yaml
@@ -22,6 +22,12 @@ paths:
       responses:
         '201':
           description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PokerJudgeResponse'
+        '400':
+          description: ''
       tags: *ref_0
   /poker/play:
     post:
@@ -63,8 +69,35 @@ components:
         hand:
           type: string
           description: 手札
+          example: H1 H2 H3 H4 H5
       required:
         - hand
+    PokerJudgeResponse:
+      type: object
+      properties:
+        hand:
+          type: string
+          description: 手札
+          example: H1 H2 H3 H4 H5
+        cardList:
+          description: カードリスト
+          example:
+            - H1
+            - H2
+            - H3
+            - H4
+            - H5
+          type: array
+          items:
+            type: string
+        role:
+          type: string
+          description: 役
+          example: STRAIGHT_FLASH
+      required:
+        - hand
+        - cardList
+        - role
     PlayPokerDto:
       type: object
       properties:
