# src/poker/poker.controller.ts
@@ -1,9 +1,9 @@
-import { Body, Controller, Get, Post } from '@nestjs/common';
-import { PokerHandDto } from './dto/poker-hand.dto';
+import { Body, Controller, Get, HttpStatus, Post } from '@nestjs/common';
+import { PokerHandDto, PokerJudgeResponse } from './dto/poker-hand.dto';
 import { PlayPokerDto } from './dto/play-poker.dto';
 import { Hand } from './poker.model';
 import { PokerService } from './poker.service';
-import { ApiTags } from '@nestjs/swagger';
+import { ApiResponse, ApiTags } from '@nestjs/swagger';
 
 @ApiTags('poker')
 @Controller({
@@ -14,10 +14,13 @@ export class PokerController {
   constructor(private readonly pokerService: PokerService) {}
 
   @Get()
+  @ApiResponse({ status: HttpStatus.OK })
   welcome() {
     return this.pokerService.welcome();
   }
   @Post('judge')
+  @ApiResponse({ status: HttpStatus.CREATED, type: PokerJudgeResponse })
+  @ApiResponse({ status: HttpStatus.BAD_REQUEST })
   async judgeRole(@Body() hand: PokerHandDto): Promise<Hand> {
     const handInfo: Hand = {
       ...hand,
